# load-balancer

./: .gitignore  CMakeLists.txt  LICENSE
example/: server.py
example/html/: first.html  second.html  third.html
include/cli/: CLI.hpp
include/config/: Config.hpp  ConfigParser.hpp
include/core/: Config.hpp  LoadBalancer.hpp  Server.hpp  SessionsWorker.hpp
include/strategy/: AttachedServer.hpp  IStrategy.hpp  LeastConnections.hpp  RoundRobin.hpp
include/utils/: ConfigParser.hpp
includes/core/: LoadBalancer.hpp
src/: main.cpp
src/cli/: CLI.cpp
src/config/: Config.cpp  ConfigParser.cpp
src/core/: LoadBalancer.cpp  SessionsWorker.cpp
src/strategy/: LeastConnections.cpp  RoundRobin.cpp
src/utils/: ConfigParser.cpp
tests/: ConfigParserTest.cpp
